@@ -1,3 +1,11 @@
+Tue Mar 13 15:01:12 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>
+
+	* lib/net/http.rb: add HTTPRequest#basic_auth.
+
+	* lib/net/smtp.rb: raise if only account or password is given.
+
+	* lib/net/protocol.rb: WriteAdapter#<< returns self.
+
 Tue Mar 13 14:41:16 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* io.c (argf_seek): wrong calling sequence of rb_io_seek().
